--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -12,6 +12,8 @@ parserOptions:
 rules: 
   no-console: 0
   linebreak-style: 0
+  consistent-return: 0
+  no-unused-vars: 0
   import/extensions: 
     - error
     - ignorePackages
