--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "url": "git+https://github.com/dashapatrusheva/frontend-project-44.git"
   },
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +24,7 @@
   "dependencies": {
     "eslint-config-airbnb-base": "^15.0.0",
     "http-server": "^14.1.1",
+    "lodash": "^4.17.21",
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
