--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dasha-brain-games17",
+  "name": "@hexlet/code",
   "description": "[![Actions Status](https://github.com/dashapatrusheva/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/dashapatrusheva/frontend-project-44/actions)",
   "version": "1.0.0",
   "type": "module",
