--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "url": "git+https://github.com/dashapatrusheva/frontend-project-44.git"
   },
   "bin": {
-    "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js",
-    "brain-calc": "bin/brain-calc.js",
-    "brain-gcd": "bin/brain-gcd.js",
-    "brain-progression": "bin/brain-progression.js",
-    "brain-prime": "bin/brain-prime.js"
+    "brain-games": "/bin/brain-games.js",
+    "brain-even": "/bin/brain-even.js",
+    "brain-calc": "/bin/brain-calc.js",
+    "brain-gcd": "/bin/brain-gcd.js",
+    "brain-progression": "/bin/brain-progression.js",
+    "brain-prime": "/bin/brain-prime.js"
   },
   "author": "",
   "license": "ISC",
