--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,7 +11,7 @@ parserOptions:
   sourceType: module
 rules: 
   no-console: 0
-  linebreak-style: ["error", "windows"]
+  linebreak-style: 0
   consistent-return: 0
   no-unused-vars: 0
   import/extensions: 
